# ProRT-IP

./: .codecov.yml  .gitignore  .markdownlint-cli2.jsonc  .mlc_config.json  AGENTS.md  AUTHORS.md  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DIAGRAMS.md  EFFICIENCY_REPORT.md  GITHUB-RELEASE-v0.3.6.md  IMPLEMENTATIONS_ADDED.md  INSTALLER-FIX-COMMIT.txt  LICENSE  README.md  README.md.backup  RELEASE-NOTES-v0.3.6.md  ROADMAP.md  SECURITY.md  SUPPORT.md  WARP.md  audit_output.txt  book.toml  build_output.txt  clippy_output.txt  deny.toml  mlc_config.json  release.toml  test_output.txt
benchmarks/sprint-6.6-mmap/: Cargo.toml  benchmark_mmap.rs
crates/prtip-cli/: Cargo.toml
crates/prtip-cli/src/: args.rs  banner.rs  confirm.rs  db_commands.rs  error.rs  error_formatter.rs  export.rs  help.rs  history.rs  lib.rs  main.rs  output.rs  progress.rs  templates.rs
crates/prtip-cli/tests/: README.md  history_integration.rs  integration.rs  integration_progress.rs  test_cli_args.rs  test_edge_cases.rs  test_error_integration.rs  test_error_messages.rs  test_evasion_combined.rs  test_idle_scan_cli.rs  test_ipv6_cli_flags.rs  test_output_formats.rs  test_port_parsing.rs  test_rate_limiting_cli.rs  test_scan_types.rs
crates/prtip-cli/tests/common/: mod.rs
crates/prtip-cli/tests/fixtures/: sample_targets.json
crates/prtip-core/: Cargo.toml
crates/prtip-core/benches/: event_system.rs
crates/prtip-core/data/: ATTRIBUTION.md
crates/prtip-core/src/: cdn_detector.rs  circuit_breaker.rs  config.rs  crypto.rs  error.rs  errors.rs  event_bus.rs  event_logger.rs  lib.rs  os_db.rs  progress.rs  resource_limits.rs  resource_monitor.rs  retry.rs  service_db.rs  templates.rs  top_ports.rs  types.rs
crates/prtip-core/src/detection/: http_fingerprint.rs  mod.rs  mysql_detect.rs  postgresql_detect.rs  smb_detect.rs  ssh_banner.rs
crates/prtip-core/src/events/: mod.rs  tests.rs  types.rs
crates/prtip-core/src/progress/: aggregator.rs  calculator.rs  mod.rs  monitor.rs
crates/prtip-core/tests/: README.md  integration.rs  test_circuit_breaker.rs  test_edge_cases.rs  test_resource_monitor.rs  test_retry.rs  test_security_input_validation.rs
crates/prtip-network/: Cargo.toml
crates/prtip-network/benches/: batch_io.rs  packet_crafting.rs
crates/prtip-network/src/: adaptive_batch.rs  batch_sender.rs  cdn_detector.rs  fragmentation.rs  icmpv6.rs  interface.rs  ipv6_packet.rs  large_buffer_pool.rs  lib.rs  packet_buffer.rs  packet_builder.rs  privilege.rs  protocol_payloads.rs
crates/prtip-network/src/capture/: linux.rs  macos.rs  mod.rs  windows.rs
crates/prtip-network/src/numa/: affinity.rs  error.rs  mod.rs  topology.rs
crates/prtip-network/tests/: adaptive_batch_integration.rs  batch_io_integration.rs  integration.rs  test_security_privilege.rs  zero_copy_tests.rs
crates/prtip-scanner/: Cargo.toml
crates/prtip-scanner/benches/: tls_performance.rs
crates/prtip-scanner/examples/: advanced_evasion_techniques.rs  advanced_idle_scan.rs  advanced_ipv6_scanning.rs  advanced_lua_plugins.rs  advanced_tls_certificate.rs  bonus_blockchain_audit.rs  bonus_machine_learning.rs  bonus_masscan_comparison.rs  bonus_nmap_compatibility.rs  bonus_realtime_dashboard.rs  common_basic_syn_scan.rs  common_config_files.rs  common_database_storage.rs  common_fast_scan.rs  common_host_discovery.rs  common_ipv4_ipv6_dual.rs  common_output_formats.rs  common_rate_limited.rs  common_service_detection.rs  common_stealth_scan.rs  common_subnet_scan.rs  common_target_specification.rs  common_tcp_connect_scan.rs  common_timing_templates.rs  common_udp_scan.rs  error_firewalled_hosts.rs  error_malformed_responses.rs  error_offline_targets.rs  error_permission_denied.rs  error_rate_limited_targets.rs  error_resource_exhaustion.rs  integration_cicd_pipeline.rs  integration_docker.rs  integration_prometheus.rs  integration_siem.rs  output_pcapng_export.rs  output_structured_logging.rs  perf_batch_sizes.rs  perf_numa_optimization.rs  perf_ulimit_tuning.rs  (+25 more)
crates/prtip-scanner/src/: adaptive_parallelism.rs  adaptive_rate_limiter.rs  adaptive_rate_limiter_v3.rs  async_storage.rs  banner_grabber.rs  concurrent_scanner.rs  connection_pool.rs  db_reader.rs  decoy_scanner.rs  discovery.rs  error.rs  hostgroup_limiter.rs  icmp_monitor.rs  lib.rs  lockfree_aggregator.rs  memory_storage.rs  os_fingerprinter.rs  os_probe.rs  pcapng.rs  progress_bar.rs  rate_limiter.rs  scheduler.rs  service_detector.rs  stealth_scanner.rs  storage.rs  storage_backend.rs  syn_scanner.rs  tcp_connect.rs  timing.rs  tls_certificate.rs  tls_handshake.rs  udp_scanner.rs
crates/prtip-scanner/src/backups/: README.md  adaptive_rate_limiter.rs  rate_limiter.rs
crates/prtip-scanner/src/idle/: idle_scanner.rs  ipid_tracker.rs  mod.rs  zombie_discovery.rs
crates/prtip-scanner/src/output/: mmap_reader.rs  mmap_writer.rs  mod.rs
crates/prtip-scanner/src/plugin/: lua_api.rs  mod.rs  plugin_api.rs  plugin_manager.rs  plugin_metadata.rs  sandbox.rs
crates/prtip-scanner/tests/: README.md  batch_coordination.rs  bench_v3_manual.rs  integration_idle_scan.rs  integration_pcapng.rs  integration_scanner.rs  integration_sprint_6_3.rs  integration_tls.rs  mmap_integration.rs  performance_tls.rs  plugin_integration_test.rs  scanner_mmap_integration.rs  test_banner_grabber.rs  test_cdn_integration.rs  test_cross_scanner_ipv6.rs  test_decoy_scanner_ipv6.rs  test_discovery_engine_ipv6.rs  test_os_probe.rs  test_security_error_handling.rs  test_service_detector.rs  test_source_port.rs  test_stealth_scanner.rs  test_stealth_scanner_ipv6.rs  test_syn_scanner_ipv6.rs  test_syn_scanner_unit.rs  test_udp_scanner.rs  test_udp_scanner_ipv6.rs  tls_parsing_benchmark.rs
crates/prtip-scanner/tests/common/: mod.rs  (+1 more)
crates/prtip-tui/: Cargo.toml
crates/prtip-tui/src/: app.rs  lib.rs  shortcuts.rs
crates/prtip-tui/tests/: integration_test.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_icmpv6_parser.rs  fuzz_ipv6_parser.rs  fuzz_tcp_parser.rs  fuzz_tls_parser.rs  fuzz_udp_parser.rs
fuzz/scripts/: generate_corpus.sh
(+874 files in other folders)
