[workspace]
members = [
    "crates/prtip-core",
    "crates/prtip-network",
    "crates/prtip-scanner",
    "crates/prtip-cli",
]

resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Networking
pnet = "0.35"
pnet_datalink = "0.35"
pnet_packet = "0.35"
socket2 = "0.5"
pcap = "2.0"
etherparse = "0.15"

# Concurrency
crossbeam = "0.8"
parking_lot = "0.12"
rayon = "1.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Rate limiting
governor = "0.6"

# Utilities
ipnetwork = "0.20"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"
rlimit = "0.10"

# Platform-specific (shared definitions)
nix = { version = "0.27", features = ["user", "process"] }
libc = "0.2"
windows = { version = "0.52", features = ["Win32_Security", "Win32_Foundation", "Win32_NetworkManagement_IpHelper"] }

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["ProRT-IP Contributors"]
license = "GPL-3.0"
repository = "https://github.com/doublegate/ProRT-IP"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
