[workspace]
members = [
    "crates/prtip-core",
    "crates/prtip-network",
    "crates/prtip-scanner",
    "crates/prtip-cli",
    "crates/prtip-tui",
]
exclude = ["fuzz"]

resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Networking
pnet = "0.35"
pnet_datalink = "0.35"
pnet_packet = "0.35"
socket2 = "0.5"
pcap = "2.0"
etherparse = "0.15"

# Concurrency
crossbeam = "0.8"
parking_lot = "0.12"
rayon = "1.8"
dashmap = "6.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Memory-mapped I/O (Sprint 6.6)
memmap2 = "0.9"
bincode = "1.3"

# CSV export (promote to workspace)
csv = "1.3"

# Template engine for HTML reports (Sprint 6.6)
tera = "1.19"

# PDF generation (Sprint 6.6, optional)
printpdf = "0.6"

# Home directory detection
dirs = "5.0"

# Packet capture
pcap-file = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Rate limiting
governor = "0.6"

# Utilities
ipnetwork = "0.20"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
num_cpus = "1.16"
rlimit = "0.10"
indicatif = "0.17"
regex = "1.11"
sysinfo = "0.30"

# Plugin system
mlua = { version = "0.11", features = ["lua54", "vendored", "send"] }

# TUI (Terminal User Interface)
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-input = "0.10"
futures = "0.3"

# Platform-specific (shared definitions)
nix = { version = "0.27", features = ["user", "process"] }
libc = "0.2"
windows = { version = "0.52", features = ["Win32_Security", "Win32_Foundation", "Win32_NetworkManagement_IpHelper", "Win32_UI_Shell"] }

[workspace.package]
version = "0.5.9"
edition = "2021"
rust-version = "1.85"
authors = ["ProRT-IP Contributors"]
license = "GPL-3.0"
repository = "https://github.com/doublegate/ProRT-IP"
description = "ProRT-IP WarScan - Modern network scanner combining Masscan speed with Nmap depth"
keywords = ["network", "scanner", "security", "nmap", "masscan"]
categories = ["network-programming", "command-line-utilities"]
documentation = "https://docs.rs/prtip-cli"
homepage = "https://github.com/doublegate/ProRT-IP"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1

# Note: Benchmarks are configured in crates/prtip-cli/Cargo.toml
