[package]
name = "prtip-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3", features = ["derive"] }

# Project workspace dependencies
prtip-network = { path = "../crates/prtip-network" }
prtip-scanner = { path = "../crates/prtip-scanner" }

# Additional dependencies for fuzzing
pnet = "0.35"
pnet_packet = "0.35"
x509-parser = "0.16"

[profile.release]
opt-level = 3          # Maximum optimization for faster fuzzing
lto = "thin"           # Thin LTO for balance of build time and performance
codegen-units = 1      # Single codegen unit for better optimization
debug = true           # Keep debug info for crash analysis

[profile.dev]
opt-level = 1          # Some optimization for dev fuzzing

# Fuzzing targets
[[bin]]
name = "fuzz_tcp_parser"
path = "fuzz_targets/fuzz_tcp_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_udp_parser"
path = "fuzz_targets/fuzz_udp_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_ipv6_parser"
path = "fuzz_targets/fuzz_ipv6_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_icmpv6_parser"
path = "fuzz_targets/fuzz_icmpv6_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_tls_parser"
path = "fuzz_targets/fuzz_tls_parser.rs"
test = false
doc = false
bench = false
