[package]
name = "prtip-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "prtip"
path = "src/main.rs"

[dependencies]
prtip-core = { path = "../prtip-core" }
prtip-network = { path = "../prtip-network" }
prtip-scanner = { path = "../prtip-scanner" }

# Async runtime
tokio = { workspace = true }

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# XML output
quick-xml = { version = "0.31", features = ["serialize"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Terminal colors
colored = { workspace = true }

# Progress bar
indicatif = { workspace = true }

# Utilities
num_cpus = { workspace = true }

# Platform-specific
libc = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
