[package]
name = "prtip-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for ProRT-IP WarScan network scanner"
keywords.workspace = true
categories.workspace = true
documentation.workspace = true

[[bin]]
name = "prtip"
path = "src/main.rs"

[features]
default = []
numa = ["prtip-scanner/numa", "prtip-network/numa"]

[dependencies]
prtip-core = { path = "../prtip-core" }
prtip-network = { path = "../prtip-network" }
prtip-scanner = { path = "../prtip-scanner" }

# Async runtime
tokio = { workspace = true }

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Output formats
quick-xml = { version = "0.31", features = ["serialize"] }
csv = "1.3"
pcap-file = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Terminal colors
colored = { workspace = true }

# Progress bar
indicatif = { workspace = true }
atty = { workspace = true }

# Utilities
num_cpus = { workspace = true }
dirs = "5.0"

# Platform-specific
libc = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
path = "../../tests/performance/benchmarks.rs"
