[package]
name = "prtip-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types, error handling, and configuration for ProRT-IP WarScan"
keywords.workspace = true
categories.workspace = true
documentation.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
ipnetwork = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
rlimit = { workspace = true }
indicatif = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
sysinfo = { workspace = true }
flate2 = "1.0"
dirs = "5.0"

[dev-dependencies]
tokio = { workspace = true }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tempfile = "3.8"
filetime = "0.2"

[[bench]]
name = "event_system"
harness = false
