[package]
name = "prtip-network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prtip-core = { path = "../prtip-core" }
tokio = { workspace = true }
pnet = { workspace = true }
pnet_datalink = { workspace = true }
pnet_packet = { workspace = true }
socket2 = { workspace = true }
etherparse = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
