[package]
name = "prtip-network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Low-level packet crafting and network I/O for ProRT-IP WarScan"
keywords.workspace = true
categories.workspace = true
documentation.workspace = true

[features]
default = []
numa = ["hwlocality"]

[dependencies]
prtip-core = { path = "../prtip-core" }
tokio = { workspace = true }
pnet = { workspace = true }
pnet_datalink = { workspace = true }
pnet_packet = { workspace = true }
socket2 = { workspace = true }
etherparse = { workspace = true }
bytes = "1.9"
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
hwlocality = { version = "1.0.0-alpha.11", optional = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["sched"] }
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "batch_io"
harness = false

[[bench]]
name = "packet_crafting"
harness = false
