[package]
name = "prtip-scanner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Vendor OpenSSL for static linking (required for musl builds)
vendored-openssl = ["native-tls/vendored"]

[dependencies]
prtip-core = { path = "../prtip-core" }
prtip-network = { path = "../prtip-network" }

# Async runtime
tokio = { workspace = true }

# Networking
pnet = { workspace = true }
pnet_packet = { workspace = true }
socket2 = { workspace = true }
etherparse = { workspace = true }

# TLS support
tokio-native-tls = "0.3"
native-tls = "0.2"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }

# Concurrency
crossbeam = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
futures = "0.3"

# Rate limiting
governor = { workspace = true }
nonzero_ext = "0.3"

# Random
rand = { workspace = true }

# Logging
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Progress tracking
indicatif = "0.17"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }
regex = "1.11.3"

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3.8"
