[package]
name = "prtip-scanner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Vendor OpenSSL for static linking (required for musl builds)
vendored-openssl = ["native-tls/vendored"]
# NUMA optimization for multi-socket systems
numa = ["prtip-network/numa"]
# Enable network-dependent integration tests (requires internet access)
network-tests = []

[dependencies]
prtip-core = { path = "../prtip-core" }
prtip-network = { path = "../prtip-network" }

# Async runtime
tokio = { workspace = true }

# Networking
pnet = { workspace = true }
pnet_packet = { workspace = true }
socket2 = { workspace = true }
etherparse = { workspace = true }
ipnetwork = { workspace = true }

# TLS support
tokio-native-tls = "0.3"
native-tls = "0.2"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
tokio-rustls = "0.24"
webpki-roots = "0.25"
x509-parser = "0.15"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }

# Concurrency
crossbeam = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
futures = "0.3"

# Rate limiting
governor = { workspace = true }
nonzero_ext = "0.3"

# Random
rand = { workspace = true }

# Logging
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Progress tracking
indicatif = "0.17"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }

# PCAPNG packet capture
pcap-file = "2.0"

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "tls_performance"
harness = false
